alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -611,8 +611,11 @@
 }
 
 .google-maps-button {
+    display: flex;
+    flex-direction: column; 
     margin-left: 184px;
     margin-top: 30px;
+    width: 291px;
 }
 
 #details-button {
@@ -627,7 +630,7 @@
 .redirect-text {
     padding-top: 10px;
     color: #024343;
-    padding-left: 11px;
+    text-align: center;
 }
 
 /* donation details */
